# timerun

./: .editorconfig  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  setup.cfg  timerun.py  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  pages.yaml  release.yaml
docs/: index.md
docs/about/: index.md
docs/cookbook/: analyze-results.md  index.md  metadata.md  share-results.md  web-framework.md
docs/guide/: callbacks.md  index.md  measure-block.md  measure-functions.md  measurement.md  metadata.md  timer.md  timespan.md
docs/overview/: index.md
docs/quickstart/: index.md
docs/recipes/: analyze-results.md  index.md  metadata.md  share-results.md
features/: __init__.py  block_timing.feature  environment.py  function_timing.feature  measurement.feature  measurement_record.feature  time_span.feature  timer_basics.feature  timer_callbacks.feature  timer_errors.feature  timer_metadata.feature  timer_reuse.feature  version.feature
features/steps/: block_timing_steps.py  common_steps.py  function_timing_steps.py  measurement_record_steps.py  measurement_steps.py  time_span_steps.py  timer_basics_steps.py  timer_callbacks_steps.py  timer_errors_steps.py  timer_metadata_steps.py  timer_reuse_steps.py  utils.py  version_steps.py
tests/: __init__.py  conftest.py  test_elapsed_time.py  test_elapsed_time_catcher.py  test_elapsed_time_measurer.py  test_elapsedtime.py  test_stopwatch.py  test_timer.py
