[metadata]
name = timerun
version = attr: timerun.__version__
url = https://github.com/HH-MWB/timerun
author = HH-MWB
author_email = h.hong@mail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
license_file = LICENSE
description = TimeRun is an elapsed time measurement library.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
zip_safe = true
python_requires = >= 3.7
include_package_data = false
py_modules = timerun
